@@ -329,6 +329,16 @@ class Contact extends Model
     }
 
     /**
+     * Get the Notifications records associated with the account.
+     *
+     * @return HasMany
+     */
+    public function notifications()
+    {
+        return $this->hasMany('App\Notification');
+    }
+
+    /**
      * Sort the contacts according a given criteria.
      * @param Builder $builder
      * @param string $criteria
@@ -1439,5 +1449,43 @@ class Contact extends Model
         if ($relatedContact) {
             return self::find($relatedContact->is_the_child_of);
         }
+    }
+
+    /**
+     * Sets a tag to the contact.
+     *
+     * @param string $tag
+     * @return Tag
+     */
+    public function setTag(string $name)
+    {
+        $tag = $this->account->tags()->firstOrCreate([
+            'name' => $name,
+        ]);
+
+        $tag->name_slug = str_slug($tag->name);
+        $tag->save();
+
+        $this->tags()->syncWithoutDetaching([$tag->id => ['account_id' => $this->account->id]]);
+
+        return $tag;
+    }
+
+    /**
+     * Unset all the tags associated with the contact.
+     * @return bool
+     */
+    public function unsetTags()
+    {
+        $this->tags()->detach();
+    }
+
+    /**
+     * Unset one tag associated with the contact.
+     * @return bool
+     */
+    public function unsetTag(Tag $tag)
+    {
+        $this->tags()->detach($tag->id);
     }
 }
