@@ -26,7 +26,7 @@ class TagsController extends Controller
 
         // if we receive an empty string, that means all tags have been removed.
         if ($request->input('tags') == '') {
-            $contact->tags()->detach();
+            $contact->unsetTags();
 
             return response()->json(['status' => 'no', 'tags' => '']);
         }
@@ -34,14 +34,7 @@ class TagsController extends Controller
         $tagsIDs = [];
         $tagsWithIdAndSlug = [];
         foreach ($tags as $tag) {
-            $tag = auth()->user()->account->tags()->firstOrCreate([
-                'name' => $tag,
-            ]);
-
-            $tag->name_slug = str_slug($tag->name);
-            $tag->save();
-
-            $tagsIDs[$tag->id] = ['account_id' => auth()->user()->account_id];
+            $tag = $contact->setTag($tag);
 
             // this is passed back in json to JS
             array_push($tagsWithIdAndSlug, [
@@ -49,8 +42,6 @@ class TagsController extends Controller
               'slug' => $tag->name_slug,
             ]);
         }
-
-        $contact->tags()->sync($tagsIDs);
 
         $response = [
           'status' => 'yes',
